# agentic-design-patterns-book-cn

./: .gitignore  README.md  pyproject.toml
book/: Chapter 10_ Model Context Protocol (MCP) _en_cn.docx  Chapter 11_ Goal Setting and Monitoring-en_cn.docx  Chapter 12_ Exception Handling and Recovery-en_cn.docx  Chapter 13_ Human-in-the-Loop-en_cn.docx  Chapter 14_ Knowledge Retrieval (RAG)-en_cn.docx  Chapter 15_ Inter-Agent Communication (A2A)-en_cn.docx  Chapter 1_ Prompt Chaining-en_cn.docx  Chapter 2_ Routing-en_cn.docx  Chapter 3_ Parallelization-en_cn.docx  Chapter 4_ Reflection-en_cn.docx  Chapter 5_ Tool Use-en_cn.docx  Chapter 6_ Planning-en_cn.docx  Chapter 7_ Multi-Agent Collaboration-en_cn.docx  Chapter 8_ Memory Management-en_cn.docx  Chapter 9_ Learning and Adaptation-en_cn.docx
demo/: chap10_mcp_client_demo.py  chap10_mcp_http_server.py  chap10_mcp_stdio_server.py  chap11_goal_setting_monitoring_langchain_demo.py  chap12_exception_handling_adk_demo.py  chap12_exception_handling_langchain_demo.py  chap13_hitl_adk_demo.py  chap14_rag_langchain_demo.py  chap1_prompt_chaining_demo.py  chap2_router_adk_demo.py  chap2_router_langchain_demo.py  chap3_paralleliazation._langchain_demo.py  chap4_reflection_langchain_demo.py  chap5_tool_use_crewai_demo.py  chap5_tool_use_langchain_demo.py  chap6_planning_crewai_demo.py  chap6_planning_langchain_demo.py  chap6_planning_langgraph_demo.py  chap7_multi_agent_crewai_demo.py  chap7_multi_agent_langchain_demo.py  chap7_multi_agent_langgraph_demo.py  chap8_memory_management_langchain_demo.py  (+1 more)
